# mcp-weatherapi

./: .env.example  README.md  claude_desktop_config.example.json  pyproject.toml  weather_server.py
